# YamaX-Utils

./: CMakeLists.txt  actions-example.cpp  cformloader.cpp  colors.h  demo-servos.cpp  docotalk.cpp  faceset.cpp  jtest.cpp  kusoran.cpp  mkform.cpp  postest.cpp  reset-all.cpp  servodef.h  setaction.cpp  setbaseform.cpp  setdeg.cpp  setface.cpp  setform.cpp  ttstest.cpp  vcat.cpp  vecho.cpp  yamax.cpp  yamax.old.cpp
face/: CMakeLists.txt  dfbimage.cpp  face.cpp  face.hpp
libposture/: CMakeLists.txt  libposture.cpp  libposture.hpp
physicalio/: CMakeLists.txt  physicalio.cpp  physicalio.hpp
posture/: CMakeLists.txt  posture.cpp  posture.hpp
posture/physicalio/: CMakeLists.txt  physicalio.cpp  physicalio.hpp
simplerequest/: CMakeLists.txt  sreq.cpp  sreq.hpp
voice/: CMakeLists.txt  tts.cpp  tts.hpp  voice.hpp  vrecog.cpp  vrecog.hpp
